// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter button render active button 1`] = `
<Component
  style={
    Object {
      "padding": 3,
      "paddingHorizontal": 3,
    }
  }
>
  <Button
    icon={
      <Icon
        color="#757575"
        name="attach-money"
        size={20}
      />
    }
    onPress={[MockFunction]}
    styles={
      Object {
        "button": Object {
          "backgroundColor": "#424242",
          "paddingLeft": 10,
        },
        "buttonText": Object {
          "paddingBottom": 11,
          "paddingTop": 9,
        },
        "buttonWrapper": Object {
          "backgroundColor": "#0097a9",
        },
        "icon": Object {
          "backgroundColor": "#616161",
        },
      }
    }
    title={
      <DummyTranslation
        id="title"
      />
    }
  />
</Component>
`;

exports[`Filter button render default button 1`] = `
<Component
  style={
    Object {
      "padding": 3,
      "paddingHorizontal": 3,
    }
  }
>
  <Button
    icon={
      <Icon
        color="#757575"
        name="attach-money"
        size={20}
      />
    }
    onPress={[MockFunction]}
    styles={
      Object {
        "button": Object {
          "backgroundColor": "#0097a9",
          "paddingLeft": 0,
        },
        "buttonText": Object {
          "paddingBottom": 11,
          "paddingTop": 9,
        },
        "buttonWrapper": Object {
          "backgroundColor": "#0097a9",
        },
        "icon": Object {
          "backgroundColor": "#0097a9",
        },
      }
    }
    title={
      <DummyTranslation
        id="title"
      />
    }
  />
</Component>
`;
